--- a/server/pom.xml
+++ b/server/pom.xml
@@ -54,6 +54,17 @@
 			<version>6.0.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- 1.  Jakarta Bean Validation 3 (Hibernate Validator) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<!-- 2.  spring-messaging (даёт аннотации SendTo / SendToUser и пр.) -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
